--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,6 +1,6 @@
 .container {
 	max-width: 800px;
-	min-width: 600px;
+	min-width: 450px;
 	padding: 40px;
 }
 .content {
@@ -56,9 +56,13 @@ li {
 }
 li > p {
 	padding: 5px;
-	margin: 0;
-	border: none;
-	width: 100%;
+    margin: 0;
+    border: none;
+    width: 100%;
+    height: 16px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 li > button {
 	width: 20px;
