--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3822,3 +3822,38 @@ button {
   top: 0;
   font-size: 10px;
 }
+
+.visual_img {
+  position: relative;
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+}
+
+.visual_img > li {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.waiting {
+  z-index: 0;
+}
+
+.slide_img {
+  left: 0px;
+  transition: all 30s;
+  z-index: 10;
+}
+
+.next_img {
+  left: 100%;
+  transition: all 30s;
+  z-index: 10;
+}
+
+.visual_img > li > img {
+  width: 100%;
+  height: 100%;
+}
