--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -2983,9 +2983,9 @@ button {
 
 .event .section_visual .group_visual .container_visual .visual_img .item {
     overflow: hidden;
-    position: relative;
+    position: absolute;
     display: inline-block;
-    width: 84.4%;
+    width: 100%;
     height: 177px;
     background-repeat: no-repeat;
     background-position: center center;
@@ -3822,3 +3822,25 @@ button {
   top: 0;
   font-size: 10px;
 }
+
+
+.current_promotion {
+	left: 0;
+    transition: left 1s ease 2s;
+    z-index: 20;
+    visibility: visible;
+}
+.next_promotion {
+	left: -100%;
+    transition: left 1s ease 2s;
+    z-index: 20;
+    visibility: visible;
+}
+.prev_promotion {
+	left: 100%;
+	transition: left 1s ease 2s;
+	z-index: 10;
+	visibility: hidden;
+}
+
+
