--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3823,6 +3823,7 @@ button {
   font-size: 10px;
 }
 
+/*
 .visual_img {
   position: relative;
   padding: 0px;
@@ -3857,3 +3858,4 @@ button {
   width: 100%;
   height: 100%;
 }
+*/
