--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2983,7 +2983,7 @@ button {
 
 .event .section_visual .group_visual .container_visual .visual_img .item {
     overflow: hidden;
-    position: relative;
+    position: absolute;
     display: inline-block;
     width: 84.4%;
     height: 177px;
@@ -3823,39 +3823,51 @@ button {
   font-size: 10px;
 }
 
-/*
-.visual_img {
-  position: relative;
-  padding: 0px;
-  margin: 0px;
-  list-style-type: none;
-}
-
-.visual_img > li {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-}
-
-.waiting {
+.item {
+  transition: transform 5s;
+  left: 0;
   z-index: 0;
 }
 
-.slide_img {
-  left: 0px;
-  transition: all 30s;
+.slide_first {
   z-index: 10;
+  visibility: visible;
+  animation-name: slide_first;
+  animation-duration: 5s;
 }
 
-.next_img {
-  left: 100%;
-  transition: all 30s;
+.slide_middle {
   z-index: 10;
+  visibility: visible;
+  animation-name: slide_middle;
+  animation-duration: 5s;
 }
 
-.visual_img > li > img {
-  width: 100%;
-  height: 100%;
+.slide_last {
+  z-index: 10;
+  visibility: visible;
+  animation-name: slide_last;
+  animation-duration: 5s;
 }
-*/
+
+.waiting {
+  visibility: hidden;
+}
+
+@keyframes slide_first {
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slide_middle {
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slide_last {
+  to {
+    transform: translateX(-100%);
+  }
+}
