--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -2985,7 +2985,7 @@ button {
     overflow: hidden;
     position: relative;
     display: inline-block;
-    width: 84.4%;
+    width: 100%;
     height: 177px;
     background-repeat: no-repeat;
     background-position: center center;
@@ -3821,4 +3821,49 @@ button {
   left: 0;
   top: 0;
   font-size: 10px;
+}
+
+
+.visual_img{
+	width: 100%;
+    position: relative;
+    left: 0;
+	animation: slide infinite 10s alternate;
+}
+
+@keyframes slide {
+  0% {
+    margin-left: 0%;
+  }
+  10% {
+    margin-left: -100%;
+  }
+  20% {
+    margin-left: -200%;
+  }
+  30% {
+    margin-left: -300%;
+  }
+  40% {
+    margin-left: -400%;
+  }
+  50% {
+    margin-left: -500%;
+  }
+  60% {
+    margin-left: -600%;
+  }
+  70% {
+    margin-left: -700%;
+  }
+  80% {
+    margin-left: -800%;
+  }
+  90% {
+    margin-left: -900%;
+  }
+  100% {
+    margin-left: -1000%;
+  }
+  
 }
