--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -114,7 +114,7 @@
 	src: url('../font/NanumGothicBold.woff') format('woff')
 }
 
-@charset "utf-8"; 
+@charset "utf-8";
 
 body, html {
 	min-height: 100%
@@ -1345,20 +1345,10 @@ button {
 
 .group_visual .visual_img .item {
 	overflow: auto;
-	position: absolute;
+	position: relative;
 	display: block;
 	white-space: normal;
 	vertical-align: top;
-}
-
-.centeredImg {
-	left : 0;
-	top : 0;
-}
-
-.outsideImg {
-	left : -414px;
-	top : 0;
 }
 
 .group_visual .visual_img .item .img_bg:before, .group_visual .visual_img .item .visual_txt
