--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 /* common */
+.more .btn{
+	width: 100%;
+	line-height: 2;
+	background-color: white;
+	border: 1px solid #d4dadf;
+}
+
 html {
     min-height: 100%;
     height: 100%;
@@ -11163,6 +11170,8 @@ select {
 .event .section_visual .group_visual .container_visual .visual_img {
     position: relative;
     min-height: 177px;
+    transition: all 2s;
+    right:0;
 }
 .event .section_visual .group_visual .container_visual .visual_img.camping {
     overflow: hidden;
@@ -11177,7 +11186,7 @@ select {
     overflow: hidden;
     position: relative;
     display: inline-block;
-    width: 84.4%;
+    width: 414px;
     height: 177px;
     background-repeat: no-repeat;
     background-position: center center;
