Reset 함수 init으로 분리, class값 id로 변경. ajax함수 변경

--- a/src/main/webapp/WEB-INF/views/mainpage.html
+++ b/src/main/webapp/WEB-INF/views/mainpage.html
@@ -49,7 +49,7 @@
                         <div>
                             <div class="container_visual">
                                 <!-- [D] 이전,다음 버튼을 클릭할때마다 캐러셀 형태로 순환 됨 -->
-                                <ul class="visual_img">
+                                <ul class="visual_img" id="promotion_ul">
                                 </ul>
                             </div>
                             <span class="nxt_fix" style="display:none;"></span>
@@ -58,12 +58,12 @@
                 </div>
             </div>
             <div class="section_event_tab">
-                <ul class="event_tab_lst tab_lst_min">
+                <ul class="event_tab_lst tab_lst_min" id="category_list">
                 </ul>
             </div>
             <div class="section_event_lst">
-                <p class="event_lst_txt">바로 예매 가능한 행사가 <span class="pink">10개</span> 있습니다</p>
-                <div class="wrap_event_box">
+                <p class="event_lst_txt">바로 예매 가능한 행사가 <span class="pink"><span id="event_num">10</span>개</span> 있습니다</p>
+                <div class="wrap_event_box" id="wrap_lst_event_box">
                     <!-- [D] lst_event_box 가 2컬럼으로 좌우로 나뉨, 더보기를 클릭할때마다 좌우 ul에 li가 추가됨 -->
                     <ul class="lst_event_box">
                     </ul>
@@ -71,7 +71,7 @@
                     </ul>
                     <!-- 더보기 -->
                     <div class="more">
-                        <button class="btn"><span>더보기</span></button>
+                        <button class="btn" id = "more_button"><span>더보기</span></button>
                     </div>
                 </div>
             </div>
