img, font 파일 경로 조정

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
 	font-family: "Naver booking Icons";
-	src: url('font/Naver-booking-Icons.woff') format('woff');
+	src: url('/font/Naver-booking-Icons.woff') format('woff');
 	font-weight: 400;
 	font-style: normal
 }
@@ -13,7 +13,7 @@
 
 @font-face {
 	font-family: "Naver Icons";
-	src: url('font/Naver-Icons.woff') format('woff');
+	src: url('/font/Naver-Icons.woff') format('woff');
 	font-weight: 400;
 	font-style: normal
 }
@@ -106,14 +106,14 @@
 	font-family: NanumGothicWebR;
 	font-style: normal;
 	font-weight: 400;
-	src: url('font/NanumGothicRegular.woff') format('woff')
+	src: url('/font/NanumGothicRegular.woff') format('woff')
 }
 
 @font-face {
 	font-family: NanumGothicWebB;
 	font-style: normal;
 	font-weight: 400;
-	src: url('font/NanumGothicBold.woff') format('woff')
+	src: url('/font/NanumGothicBold.woff') format('woff')
 }
 
 @charset "utf-8";
@@ -421,7 +421,7 @@ hr {
 
 .spr_book {
 	display: inline-block;
-	background-image: url(../img/spr_book.png);
+	background-image: url(/img/spr_book.png);
 	background-size: 400px 400px;
 	vertical-align: top;
 	text-indent: 100%;
@@ -481,7 +481,7 @@ hr {
 }
 
 .spr_book2 {
-	background-image: url(../img/spr_book2.png);
+	background-image: url(/img/spr_book2.png);
 	background-size: 330px 400px
 }
 
@@ -586,7 +586,7 @@ hr {
 }
 
 .spr_bi {
-	background-image: url(../img/spr_bi.png);
+	background-image: url(/img/spr_bi.png);
 	background-size: 130px 120px
 }
 
@@ -640,7 +640,7 @@ input[type=checkbox].chk_agree+.label:before {
 	overflow: hidden;
 	display: inline-block;
 	color: transparent;
-	background-image: url(../img/spr_book2.png);
+	background-image: url(/img/spr_book2.png);
 	background-size: 330px 400px;
 	vertical-align: top
 }
@@ -934,7 +934,7 @@ button {
 	left: 0;
 	width: 9px;
 	height: 11px;
-	background-image: url(../img/spr_book2.png);
+	background-image: url(/img/spr_book2.png);
 	background-size: 330px 400px;
 	background-repeat: no-repeat;
 	background-position: -299px -26px;
@@ -2499,7 +2499,7 @@ button {
 
 .section_review_list .grade_area .graph_mask, .section_review_list .grade_area .graph_value,
 	.section_review_list .short_review_area .review_info .grade:before {
-	background-image: url(../img/spr_comment.png);
+	background-image: url(/img/spr_comment.png);
 	background-repeat: no-repeat;
 	background-size: 90px 130px
 }
@@ -2838,7 +2838,7 @@ button {
 .section_my .wrap_mylist .list_cards .card .card_header .left {
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_hl.png);
+	background-image: url(/img/bg_card_hl.png);
 	background-size: 12px 54px;
 	background-repeat: no-repeat;
 	width: 12px;
@@ -2850,7 +2850,7 @@ button {
 	position: relative;
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_hm.gif);
+	background-image: url(/img/bg_card_hm.gif);
 	background-size: auto 54px;
 	background-repeat: repeat-x;
 	width: 100%;
@@ -2878,7 +2878,7 @@ button {
 .section_my .wrap_mylist .list_cards .card .card_header .right {
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_hr.png);
+	background-image: url(/img/bg_card_hr.png);
 	background-size: 12px 54px;
 	background-repeat: no-repeat;
 	width: 12px;
@@ -2919,7 +2919,7 @@ button {
 .section_my .wrap_mylist .list_cards .card .card_body .left {
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_bl.png);
+	background-image: url(/img/bg_card_bl.png);
 	background-size: 12px 2px;
 	background-repeat: repeat-y;
 	width: 12px;
@@ -3059,7 +3059,7 @@ button {
 .section_my .wrap_mylist .list_cards .card .card_body .right {
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_br.png);
+	background-image: url(/img/bg_card_br.png);
 	background-size: 12px 2px;
 	background-repeat: repeat-y;
 	width: 12px;
@@ -3074,7 +3074,7 @@ button {
 .section_my .wrap_mylist .list_cards .card .card_footer .left {
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_fl.png);
+	background-image: url(/img/bg_card_fl.png);
 	background-size: 12px 2px;
 	background-repeat: no-repeat;
 	width: 12px;
@@ -3085,7 +3085,7 @@ button {
 .section_my .wrap_mylist .list_cards .card .card_footer .middle {
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_fm.png);
+	background-image: url(/img/bg_card_fm.png);
 	background-size: 100% 2px;
 	background-repeat: no-repeat;
 	width: 100%;
@@ -3096,7 +3096,7 @@ button {
 .section_my .wrap_mylist .list_cards .card .card_footer .right {
 	overflow: hidden;
 	display: table-cell;
-	background-image: url(../img/bg_card_fr.png);
+	background-image: url(/img/bg_card_fr.png);
 	background-size: 12px 2px;
 	background-repeat: no-repeat;
 	width: 12px;
@@ -3111,29 +3111,29 @@ button {
 
 .section_my .wrap_mylist .list_cards .card.confirmed .card_header .left
 	{
-	background-image: url(../img/bg_card2_hl.png)
+	background-image: url(/img/bg_card2_hl.png)
 }
 
 .section_my .wrap_mylist .list_cards .card.confirmed .card_header .middle
 	{
-	background-image: url(../img/bg_card2_hm.gif)
+	background-image: url(/img/bg_card2_hm.gif)
 }
 
 .section_my .wrap_mylist .list_cards .card.confirmed .card_header .right
 	{
-	background-image: url(../img/bg_card2_hr.png)
+	background-image: url(/img/bg_card2_hr.png)
 }
 
 .section_my .wrap_mylist .list_cards .card.used .card_header .left {
-	background-image: url(../img/bg_card3_hl.png)
+	background-image: url(/img/bg_card3_hl.png)
 }
 
 .section_my .wrap_mylist .list_cards .card.used .card_header .middle {
-	background-image: url(../img/bg_card3_hm.gif)
+	background-image: url(/img/bg_card3_hm.gif)
 }
 
 .section_my .wrap_mylist .list_cards .card.used .card_header .right {
-	background-image: url(../img/bg_card3_hr.png)
+	background-image: url(/img/bg_card3_hr.png)
 }
 
 .event {
@@ -3507,7 +3507,7 @@ button {
 	overflow: hidden;
 	display: inline-block;
 	color: transparent;
-	background-image: url(../img/spr_book_event.png);
+	background-image: url(/img/spr_book_event.png);
 	background-size: 150px 50px;
 	-webkit-background-size: 150px 50px;
 	vertical-align: top;
