한줄평더보기 페이지 구현

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3854,6 +3854,6 @@ button {
   }
 }
 
-.list_short_review li:nth-of-type(n+4) { 
+.list_short_review.mainpage_review li:nth-of-type(n+4) { 
     display: none;
 }
