--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3857,3 +3857,37 @@ button {
 .list_short_review.mainpage_review li:nth-of-type(n+4) { 
     display: none;
 }
+
+.nxt, .prev {
+  z-index: 100;
+}
+
+.visual_img.detail_swipe > .item {
+  position: absolute;
+  left: 0;
+  animation-fill-mode: forwards;
+}
+
+.slide_left_in {
+  z-index: 20;
+  animation-name: slide_in;
+  animation-duration: 2s;
+}
+
+.slide_left_out {
+  z-index: 20;
+  animation-name: slide_out;
+  animation-duration: 2s;
+}
+
+@keyframes slide_left_in {
+  to {
+  	margin-left: -414px;
+  }
+}
+
+@keyframes slide_left_out {
+  to {
+  	margin-left: -414px;
+  }
+}
