--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3865,7 +3865,12 @@ button {
 .visual_img.detail_swipe > .item {
   position: absolute;
   left: 0;
+  visibility: hidden;
   animation-fill-mode: forwards;
+}
+
+.visual_img.detail_swipe > .item[data-index="0"] {
+  visibility: visible;
 }
 
 .slide_left_in {
@@ -3880,14 +3885,42 @@ button {
   animation-duration: 2s;
 }
 
-@keyframes slide_left_in {
+.slide_right_in {
+  z-index: 20;
+  animation-name: slide_right_in;
+  animation-duration: 2s;
+}
+
+ .slide_right_out {
+  z-index: 20;
+  animation-name: slide_right_out;
+  animation-duration: 2s;
+}
+
+@keyframes slide_right_in {
   to {
-  	margin-left: -414px;
+    transform: translateX(100%);
   }
 }
 
-@keyframes slide_left_out {
+@keyframes slide_right_out {
   to {
-  	margin-left: -414px;
+    transform: translateX(100%);
   }
+}
+
+.display_title {
+  position: absolute;
+  text-align: center;
+  width: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  font-family: -apple-system,BlinkMacSystemFont,'Apple SD Gothic Neo',Helvetica Nenu,Helvetica,Roboto,Arial,NanumGothicWebB,'맑은고딕',MalgunGothic,'돋움',Dotum,sans-serif;
+  font-weight: 600;
+  text-shadow: 0 0 1px rgba(0,0,0,.2);
+  font-size: 35px;
+  line-height: 40px;
+  color: #fff;
 }
