--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2985,7 +2985,7 @@ button {
     overflow: hidden;
     position: relative;
     display: inline-block;
-    width: 84.4%;
+    width: 100%;
     height: 177px;
     background-repeat: no-repeat;
     background-position: center center;
@@ -3822,3 +3822,9 @@ button {
   top: 0;
   font-size: 10px;
 }
+
+.visual_img > .item {
+	transition-duration: 1s;
+	left: 0;
+}
+
