--- a/src/main/webapp/css/slide.css
+++ b/src/main/webapp/css/slide.css
@@ -1,3 +1,12 @@
 .transition {
 	transition: left 2s;
 }
+
+.visual_img li {
+	display: inline-block;
+}
+
+.visual_img {
+	top: 0;
+	list-style: none;
+}
