a tag href속성 관련 처리

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3858,8 +3858,12 @@ button {
     display: none;
 }
 
-.nxt, .prev {
+.header {
   z-index: 100;
+}
+
+.nxt, .prev {
+  z-index: 50;
 }
 
 .visual_img.detail_swipe > .item {
