swipe 이미지 두번째장의 텍스트가 내려가는 문제 수정

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1408,6 +1408,11 @@ button {
 	box-sizing: border-box
 }
 
+.visual_txt_inn {
+    float: left;
+    margin-top: 45%;
+}
+
 .bottom_common_path {
 	-webkit-box-sizing: border-box;
 	moz-box-sizing: border-box
