--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1299,11 +1299,11 @@ button {
 }
 
 /* added by crong. */
-.form_horizontal .inline_form .inline_control.tel_wrap {
+.form_horizontal .inline_form .inline_control {
 	position: relative;
 }
 
-.form_horizontal .inline_form .inline_control.tel_wrap .warning_msg {
+.form_horizontal .inline_form .inline_control .warning_msg {
 	position: relative;
 	position: absolute;
 	top: 0;
