--- a/src/main/webapp/css/error.css
+++ b/src/main/webapp/css/error.css
@@ -1,8 +1,12 @@
 body * {
 	display: block;
 	text-align: center;
-	margin: 80px auto;
+	margin: 0 auto;
 	padding: 20px;
+}
+
+.message_holder {
+	margin: 120px; 
 }
 
 button {
