--- a/src/main/webapp/css/bookinglogin.css
+++ b/src/main/webapp/css/bookinglogin.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Naver booking Icons";
-    //src: url('/../img/fonts/Naver-booking-Icons.woff?456918077') format('woff');
+    //src: url('../font/Naver-booking-Icons.woff?456918077') format('woff');
     font-weight: 400;
     font-style: normal
 }
@@ -126,7 +126,7 @@
 }
 @font-face {
     font-family: "Naver Icons";
-    //src: url('/../img/fonts/Naver-Icons.woff?456918077') format('woff');
+    //src: url('../font/Naver-Icons.woff?456918077') format('woff');
     font-weight: 400;
     font-style: normal
 }
@@ -827,13 +827,13 @@
     font-family: NanumGothicWebR;
     font-style: normal;
     font-weight: 400;
-    src: url('/../img/fonts/NanumGothicRegular.woff?1703172120') format('woff')
+    src: url('../font/NanumGothicRegular.woff?1703172120') format('woff')
 }
 @font-face {
     font-family: NanumGothicWebB;
     font-style: normal;
     font-weight: 400;
-    src: url('/../img/fonts/NanumGothicBold.woff?1703172120') format('woff')
+    src: url('../font/NanumGothicBold.woff?1703172120') format('woff')
 }
 @charset "utf-8";
 body,
@@ -14817,4 +14817,10 @@ body.en .subscribe_banner .subscribe_strapline {
     .michelin .tab_wrap {
         width: 414px!important
     }
+}
+
+.warning_msg {
+  color: red;
+  display: none;
+  text-align: center;
 }
