--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -4157,12 +4157,17 @@ button {
 	top: 0;
 	font-size: 10px;
 }
+/* 여기까지 처음에 제공받은 CSS */
 
+
+
+/* Image의 애니메이션을 처리하기위해 transaction-duration과 left속성 정의 */
 .visual_img>.item {
 	transition-duration: 1s;
 	left: 0;
 }
 
+/* 더보기 버튼이 필표하지 않은 상황에서 숨기기 위해 기본 display속성 정의 */
 .btn {
 	display: initial;
 }
