--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-.visual_img {
+#main_slide {
 	padding: 0px;
 	margin: 0px;
 	list-style: none;
@@ -9,7 +9,7 @@
 	transition: 1s;
 }
 
-.visual_img li img {
+#main_slide li img {
 	width: 414px;
 	height: 200px;
 	position: relative;
