--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1242,7 +1242,7 @@ button {
 }
 
 
-.form_horizontal .inline_form .inline_control.tel_wrap .warning_msg {
+.form_horizontal .inline_form .inline_control .warning_msg {
     position: relative;
     position: absolute;
     top: 0;
