--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -4150,3 +4150,14 @@ button {
 	top: 0;
 	font-size: 10px;
 }
+
+.logout {
+	line-height: 60px;
+	text-align: center;
+	height: 60px;
+	background-color: lightgray;
+	border-radius: 10px;
+	margin: 20px;
+	font-size: 2em;
+	font-weight: 700;
+}
