예약하기 비활성시 손가락모양안나오도록 css 수정

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -745,7 +745,8 @@ button {
 
 .bk_btn_wrap.disable .bk_btn {
     border: 1px solid #ccc;
-    background-color: #d1d1d1
+    background-color: #d1d1d1;
+    cursor: Default;
 }
 
 .top_title {
