--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -824,7 +824,11 @@ button {
     font-size: 21px;
     color: #fff;
     font-weight: 300;
-    box-sizing: border-box
+    box-sizing: border-box;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 300px;
 }
 
 .top_title {
