헤더영역 메일정보 최대길이 수정

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,3 +1,10 @@
+header > .btn_my {
+	text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 250px;
+}
+
 @font-face {
     font-family: "Naver booking Icons";
     src: url('../font/Naver-booking-Icons.woff') format('woff');
