--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -3928,7 +3928,7 @@ button {
 	width: 35px;
 	height: 32px;
 	margin-left: -38px;
-	background-image: url('../img/spr_comment.png');
+	background-image: url('../image/spr_comment.png');
 	background-repeat: no-repeat;
 	background-size: 90px 130px;
 	background-position: 0 -92px;
