구매가능한 티켓수 설정 및 안내 및 경고메시지 추가

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1687,6 +1687,21 @@ button {
     width: 127px
 }
 
+.count_control .warning_msg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #ffffff;
+    visibility: hidden;
+    font-size: 16px;
+    height: 26px;
+    line-height: 26px;
+    width: 98%;
+    color: red;
+    padding-left: 10px;
+}
+
+
 .count_control .btn_plus_minus {
     display: inline-block;
     float: left;
