React 버전 상세 페이지 까지 제작

--- a/src/main/webapp/resources/css/animation.css
+++ b/src/main/webapp/resources/css/animation.css
@@ -33,3 +33,55 @@
         transform: translateX(0);
     }
 }
+.slideRightIn {
+    animation-name: slideRightIn;
+    animation-duration: 1s; 
+    animation-fill-mode: forwards;
+}
+@keyframes slideRightIn {
+    to {
+        transform: translateX(0);
+    }
+    from {
+        transform: translateX(-100%);
+    }
+}
+.slideRightOut {
+    animation-name: slideRightOut;
+    animation-duration: 1s; 
+    animation-fill-mode: forwards;
+}
+@keyframes slideRightOut {
+    to {
+        transform: translateX(100%);
+    }
+    from {
+        transform: translateX(0);
+    }
+}
+.slideLeftIn {
+    animation-name: slideLeftIn;
+    animation-duration: 1s; 
+    animation-fill-mode: forwards;
+}
+@keyframes slideLeftIn {
+    to {
+        transform: translateX(0);
+    }
+    from {
+        transform: translateX(100%);
+    }
+}
+.slideLeftOut {
+    animation-name: slideLeftOut;
+    animation-duration: 1s; 
+    animation-fill-mode: forwards;
+}
+@keyframes slideLeftOut {
+    to {
+        transform: translateX(-100%);
+    }
+    from {
+        transform: translateX(0%);
+    }
+}
