--- a/src/main/webapp/css/bookinglogin.css
+++ b/src/main/webapp/css/bookinglogin.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Naver booking Icons";
-    //src: url('/fonts/Naver-booking-Icons.woff?456918077') format('woff');
+    //src: url('/font/Naver-booking-Icons.woff?456918077') format('woff');
     font-weight: 400;
     font-style: normal
 }
@@ -126,7 +126,7 @@
 }
 @font-face {
     font-family: "Naver Icons";
-    //src: url('/../img/fonts/Naver-Icons.woff?456918077') format('woff');
+    //src: url('/font/Naver-Icons.woff?456918077') format('woff');
     font-weight: 400;
     font-style: normal
 }
@@ -827,13 +827,13 @@
     font-family: NanumGothicWebR;
     font-style: normal;
     font-weight: 400;
-    src: url('/../img/fonts/NanumGothicRegular.woff?1703172120') format('woff')
+    src: url('/font/NanumGothicRegular.woff?1703172120') format('woff')
 }
 @font-face {
     font-family: NanumGothicWebB;
     font-style: normal;
     font-weight: 400;
-    src: url('/../img/fonts/NanumGothicBold.woff?1703172120') format('woff')
+    src: url('/font/NanumGothicBold.woff?1703172120') format('woff')
 }
 @charset "utf-8";
 body,
@@ -1855,7 +1855,7 @@ hr {
     background-position: 0 -184px
 }
 .spr_bi {
-    background-image: url('../img/spr_bi.c753b938cfe0481b000adab9b84a1f8c.png');
+    background-image: url('/img/spr_bi.c753b938cfe0481b000adab9b84a1f8c.png');
     background-size: 130px 154px;
     font-size: 0
 }
@@ -1912,7 +1912,7 @@ hr {
     background-position: -72px -120px
 }
 .spr_home {
-    background-image: url('.../img/spr_home.70cfae680703bc68ceac252c5a5c2070.png');
+    background-image: url('/img/spr_home.70cfae680703bc68ceac252c5a5c2070.png');
     background-size: 220px 120px;
     font-size: 0
 }
@@ -1967,7 +1967,7 @@ hr {
     background-position: -98px 0
 }
 .spr_green_ticket {
-    background-image: url('.../img/spr_green_ticket.73feec583d697621ed02757442ae3009.png');
+    background-image: url('/img/spr_green_ticket.73feec583d697621ed02757442ae3009.png');
     background-size: 230px 70px
 }
 .spr_green_ticket.ico_green_ticket {
