상품평 이미지 필요없는 코드 제거 및 style 수정
- thumb a 태그 제거
- .thumb_area img => style border 적용

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2489,6 +2489,10 @@ button {
     margin: 0 0 8px 14px
 }
 
+.section_review_list .short_review_area .thumb_area img {
+    border: 1px solid rgba(0,0,0,.1);
+}
+
 .section_review_list .short_review_area .thumb_area .thumb {
     display: block;
     position: relative
